<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    style="@style/Theme.AppCompat.Light.NoActionBar"
    android:layout_width="match_parent"
    android:paddingTop="84dp"
    android:clipToPadding="false"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.Toolbar>
        <ImageView
            android:id="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="150dp" />
        <LinearLayout
            android:layout_below="@+id/logo"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="16dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:theme="@style/TextLabelLogin"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:theme="@style/TextLabelLogin"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:theme="@style/TextLabelLogin"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:id="@+id/signUp"
                android:background="@android:color/white"
                android:text="@string/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/signInGoogle"
                    android:background="@android:color/white"
                    android:textColor="@android:color/black"
                    android:text="@string/signup_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:src="@drawable/ic_google_color"
                    android:clickable="false"
                    android:translationZ="100dp"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="16dp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/alreadyAccount"
                android:gravity="center_horizontal"
                android:background="?selectableItemBackground"
                android:text="@string/already_account"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:padding="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </RelativeLayout>

</ScrollView>